--- a/templates/modify.html
+++ b/templates/modify.html
@@ -12,6 +12,10 @@
             </div>
             <div class="ui bottom attached active tab segment" data-tab="information">
                 <form class="ui form">
+                    <div class="field">
+                        <label>照片檔案名</label>
+                        <input type="text" ng-model="about.teacher.img">
+                    </div>
                     <div class="inline field">
                         <label>姓名</label>
                         <input type="text" ng-model="about.teacher.name">
