--- a/css/style.css
+++ b/css/style.css
@@ -95,5 +95,9 @@
 
 .img-header-text {
 	background: rgba(200,200,200, 0.65);
-	border-radius: 6px;
+}
+
+#header_text {
+	padding-top: 1em;
+	padding-bottom: 1em;
 }
