add new column to members

--- a/templates/members.html
+++ b/templates/members.html
@@ -6,6 +6,13 @@
             </div>
             <div class="content">
                 <a class="header">{{ member.name }}</a>
+                <div class="meta">
+                    <span class="date">{{ member.start }} ~ {{ member.end }}</span>
+                </div>
+                <div class="description">{{ member.title }}</div>
+            </div>
+            <div class="extra content">
+                <a><i class="mail icon"></i>{{ member.mail }}</a>
             </div>
         </div>
     </div>
