--- a/templates/about.html
+++ b/templates/about.html
@@ -1,122 +1,67 @@
-<div class="row" ng-controller="aboutCtrl" ng-init="init_about()">
-    <div class="eight wide column">
-        <img class="ui centered medium rounded image" ng-src="{{teacher.img}}">
-        <div class="ui top attached tabular menu">
-            <a class="active item" data-tab="information">個人資訊</a>
-            <a class="item" data-tab="history">簡歷</a>
-            <a class="item" data-tab="work">著作</a>
-        </div>
-        <div class="ui bottom attached active tab segment" data-tab="information">
-            <table class="ui selectable striped celled table">
-                <tbody>
-                    <tr>
-                        <td>姓名</td>
-                        <td>{{ teacher.name }}</td>
-                    </tr>
-                    <tr>
-                        <td>職稱</td>
-                        <td>{{ teacher.title }}</td>
-                    </tr>
-                    <tr>
-                        <td>辦公室</td>
-                        <td>{{ teacher.office }}</td>
-                    </tr>
-                    <tr>
-                        <td>電話</td>
-                        <td>{{ teacher.phone }}</td>
-                    </tr>
-                    <tr>
-                        <td>傳真</td>
-                        <td>{{ teacher.fax }}</td>
-                    </tr>
-                    <tr>
-                        <td>信箱</td>
-                        <td>{{ teacher.mail }}</td>
-                    </tr>
-                    <tr>
-                        <td>實驗室</td>
-                        <td>{{ teacher.lab }}</td>
-                    </tr>
-                </tbody>
-            </table>
-        </div>
-        <div class="ui bottom attached tab segment" data-tab="history">
-            <div class="ui centered card">
-                <div class="content">
-                    <div class="header">學歷</div>
-                    <div class="description">{{ teacher.resume.educational_background }}</div>
-                </div>
+<div class="ui centered stackable grid">
+    <div class="row" ng-controller="aboutCtrl" ng-init="init_about()">
+        <div class="eight wide column">
+            <img class="ui centered medium rounded image" ng-src="{{teacher.img}}">
+            <div class="ui top attached tabular menu">
+                <a class="active item" data-tab="information">個人資訊</a>
+                <a class="item" data-tab="history">簡歷</a>
             </div>
-            <div class="ui centered card">
-                <div class="content">
-                    <div class="header">經歷</div>
-                    <div class="description" ng-repeat="e in teacher.resume.experience">{{ e }}</div>
-                </div>
-            </div>
-            <div class="ui centered card">
-                <div class="content">
-                    <div class="header">專長</div>
-                    <div class="description" ng-repeat="e in teacher.resume.speciality">{{ e }}</div>
-                </div>
-            </div>
-            <div class="ui centered card">
-                <div class="content">
-                    <div class="header">教學課程</div>
-                    <div class="description" ng-repeat="e in teacher.resume.course">{{ e }}</div>
-                </div>
-            </div>
-            <div class="ui centered card">
-                <div class="content">
-                    <div class="header">研究興趣</div>
-                    <div class="description" ng-repeat="e in teacher.resume.research">{{ e }}</div>
-                </div>
-            </div>
-        </div>
-        <div class="ui bottom attached tab segment" data-tab="work">
-            <div class="ui item">
-                <div class="ui tag labels">
-                    <a class="ui tag label">期刊論文</a>
-                    <a class="ui tag label">SCI or SSCI Journal Papers</a>
-                </div>
+            <div class="ui bottom attached active tab segment" data-tab="information">
                 <table class="ui selectable striped celled table">
-                    <tr>
-                        <td>Chang, C.L., Lin, Y.T., Chiueh, P.T.* (2014). Single Criterion and Multiple Criteria Analysis: A Comparison of Water Quality Monitoring Designs for a River System. Water Resources Management. 28, 645-655.</td>
-                    </tr>
-                    <tr>
-                        <td>Hu, S.Y., Chiueh, P.T., Hsieh, P.C.* (2014). A novel semianalytical approach for non-uniform vegetated flows. Advances in Water Resources. 64, 1-8.</td>
-                    </tr>
+                    <tbody>
+                        <tr>
+                            <td>姓名</td>
+                            <td>{{ teacher.name }}</td>
+                        </tr>
+                        <tr>
+                            <td>職稱</td>
+                            <td>{{ teacher.title }}</td>
+                        </tr>
+                        <tr>
+                            <td>辦公室</td>
+                            <td>{{ teacher.office }}</td>
+                        </tr>
+                        <tr>
+                            <td>電話</td>
+                            <td>{{ teacher.phone }}</td>
+                        </tr>
+                        <tr>
+                            <td>傳真</td>
+                            <td>{{ teacher.fax }}</td>
+                        </tr>
+                        <tr>
+                            <td>信箱</td>
+                            <td>{{ teacher.mail }}</td>
+                        </tr>
+                    </tbody>
                 </table>
-                <br />
             </div>
-            <div class="ui item">
-                <div class="ui tag labels">
-                    <a class="ui tag label">期刊論文</a>
-                    <a class="ui tag label">Other Journal Papers</a>
+            <div class="ui bottom attached tab segment" data-tab="history">
+                <div class="ui centered card">
+                    <div class="content">
+                        <div class="header">學歷</div>
+                        <div class="description">{{ teacher.resume.educational_background }}</div>
+                    </div>
                 </div>
-                <table class="ui selectable striped celled table">
-                    <tr>
-                        <td>Syu, F. S., Chiueh, P.T.* (2012). Process simulation of rice straw torrefaction. Sustainable Environment Research, 22 (3):177-183.</td>
-                    </tr>
-                </table>
-                <br />
-            </div>
-            <div class="ui tag labels">
-                <a class="ui tag label">研討會論文</a>
-                <a class="ui tag label">International Conferences</a>
-            </div>
-            <table class="ui selectable striped celled table">
-                <tr>
-                    <td>Chiang, T. W., Chang, C. L., Chiueh, P. T.* (2014/9). A Reservoir-Based Impact Assessment of Regional Water Consumption for Use in LCAs. The 9th International Conference on Urban Watershed Management. Tianjin, China.</td>
-                </tr>
-                <tr>
-                    <td>Shiu, H. Y., Chiueh, P. T.*, Lo, S. L. (2014/9). Life Cycle Assessment of Urban Wastewater Treatment. The 9th International Conference on Urban Watershed Management. Tianjin, China.</td>
-                </tr>
-            </table>
-            <div class="ui tag labels">
-                <a class="ui tag label">研討會論文</a>
-                <a class="ui tag label">Domestic Conferences</a>
+                <div class="ui centered card">
+                    <div class="content">
+                        <div class="header">經歷</div>
+                        <div class="description" ng-repeat="e in teacher.resume.experience">{{ e }}</div>
+                    </div>
+                </div>
+                <div class="ui centered card">
+                    <div class="content">
+                        <div class="header">專長</div>
+                        <div class="description" ng-repeat="e in teacher.resume.speciality">{{ e }}</div>
+                    </div>
+                </div>
+                <div class="ui centered card">
+                    <div class="content">
+                        <div class="header">研究興趣</div>
+                        <div class="description" ng-repeat="e in teacher.resume.research">{{ e }}</div>
+                    </div>
+                </div>
             </div>
         </div>
     </div>
-</div>
 </div>
