add animation scroll to content

--- a/templates/home.html
+++ b/templates/home.html
@@ -1,6 +1,6 @@
 <div class="row">
-    <div class="eight wide column">
-        <h3 class="ui header">We Help Companies and Companions</h3>
-        <p>We can give your company superpowers to do things that they never thought possible. Let us delight your customers and empower your needs...through pure data analytics.</p>
+    <div class="eight wide column centered">
+        <h3 class="ui header">Impact Assessment</h3>
+        <p>We devote ourselves to develop impact assessment methods for environmental issues of all levels, from environmental impact assessment carried out for individual projects, strategic environmental assessment of policies, plans and programs to the life cycle assessment of environmental technologies.</p>
     </div>
 </div>
