add course modified page

--- a/templates/modify.html
+++ b/templates/modify.html
@@ -3,8 +3,9 @@
         <div class="ui top attached tabular menu">
             <a class="active item" data-tab="about">修改老師資料</a>
             <a class="item" data-tab="members">修改成員</a>
+            <a class="item" data-tab="courses">修改課程</a>
         </div>
-        <div class="ui bottom attached active tab segment" data-tab="about" ng-init="retrieve_about()">
+        <div class="ui bottom attached active tab segment" data-tab="about">
             <div class="ui top attached tabular menu">
                 <a class="active item" data-tab="information">個人資訊</a>
                 <a class="item" data-tab="resume">簡歷</a>
@@ -69,7 +70,7 @@
             </div>
         </div>
         <div class="ui bottom attached tab segment" data-tab="members">
-            <form class="ui form" ng-init="retrieve_members()">
+            <form class="ui form">
                 <div class="ui segment" ng-repeat="member in members">
                     <div class="seven fields">
                         <div class="field">
@@ -111,6 +112,34 @@
             <div class="output_container">
                 <div class="blue ui button" ng-click="output('members')">
                     <i class="file icon"></i>輸出成員資料
+                </div>
+            </div>
+        </div>
+        <div class="ui bottom attached tab segment" data-tab="courses">
+            <form class="ui form">
+                <div class="ui segment" ng-repeat="course in courses">
+                    <div class="field">
+                        <input type="text" ng-model="course.name" placeholder="課程名稱">
+                    </div>
+                    <div class="field">
+                        <textarea ng-model="course.description" placeholder="課程描述"></textarea>
+                    </div>
+                    <div class="field centered">
+                        <div class="red ui labeled icon button" ng-click="delete_course()">
+                            <i class="icon remove"></i>刪除課程
+                        </div>
+                    </div>
+                </div>
+                <div class="field centered">
+                    <div class="green ui labeled icon button" ng-click="add_course()">
+                        <i class="icon add"></i>新增一門課程
+                    </div>
+                </div>
+            </form>
+            <h4 class="ui horizontal divider header">輸出課程資料</h4>
+            <div class="output_container">
+                <div class="blue ui button" ng-click="output('courses')">
+                    <i class="file icon"></i>輸出課程資料
                 </div>
             </div>
         </div>
