--- a/templates/home.html
+++ b/templates/home.html
@@ -1,6 +1,6 @@
-<div class="row">
+<div class="row" ng-controller="homeCtrl" ng-init="init_home()">
     <div class="eight wide column centered">
-        <h3 class="ui header">Impact Assessment</h3>
-        <p>We devote ourselves to develop impact assessment methods for environmental issues of all levels, from environmental impact assessment carried out for individual projects, strategic environmental assessment of policies, plans and programs to the life cycle assessment of environmental technologies.</p>
+        <h3 class="ui header">{{ home.title }}</h3>
+        <p>{{ home.description }}</p>
     </div>
 </div>
