--- a/templates/modify.html
+++ b/templates/modify.html
@@ -1,11 +1,30 @@
 <div class="row" ng-controller="modifyCtrl" ng-init="init_modify()">
     <div class="eight wide column">
         <div class="ui top attached tabular menu">
-            <a class="active item" data-tab="about">修改老師資料</a>
+            <a class="active item" data-tab="home">修改首頁資料</a>
+            <a class="item" data-tab="about">修改老師資料</a>
             <a class="item" data-tab="members">修改成員</a>
             <a class="item" data-tab="courses">修改課程</a>
         </div>
         <div class="ui bottom attached active tab segment" data-tab="about">
+            <form class="ui form">
+                <div class="field">
+                    <label>首頁標題</label>
+                    <input type="text" ng-model="home.title">
+                </div>
+                <div class="field">
+                    <label>首頁內文</label>
+                    <textarea ng-model="home.description"></textarea>
+                </div>
+            </form>
+            <h4 class="ui horizontal divider header">輸出首頁資料</h4>
+            <div class="output_container">
+                <div class="blue ui button" ng-click="output('home')">
+                    <i class="file icon"></i>輸出首頁資料
+                </div>
+            </div>
+        </div>
+        <div class="ui bottom attached tab segment" data-tab="about">
             <div class="ui top attached tabular menu">
                 <a class="active item" data-tab="information">個人資訊</a>
                 <a class="item" data-tab="resume">簡歷</a>
