--- a/templates/modify.html
+++ b/templates/modify.html
@@ -6,7 +6,7 @@
             <a class="item" data-tab="members">修改成員</a>
             <a class="item" data-tab="courses">修改課程</a>
         </div>
-        <div class="ui bottom attached active tab segment" data-tab="about">
+        <div class="ui bottom attached active tab segment" data-tab="home">
             <form class="ui form">
                 <div class="field">
                     <label>首頁標題</label>
