--- a/templates/members.html
+++ b/templates/members.html
@@ -1,18 +1,134 @@
-<div class="row" ng-controller="memberCtrl" ng-init="init_member()">
-    <div class="ui link cards">
-        <div class="ui card" ng-repeat="member in members">
-            <div class="image">
-                <img ng-src="{{member.img}}">
-            </div>
-            <div class="content">
-                <a class="header">{{ member.name }}</a>
-                <div class="meta">
-                    <span class="date">{{ member.start }} ~ {{ member.end }}</span>
+<div ng-controller="memberCtrl" ng-init="init_member()">
+    <div class="row" >
+        <div class="ui link cards">
+            <div class="ui card" ng-repeat="member in visiting_scholars">
+                <div class="image">
+                    <img ng-src="{{member.img}}">
                 </div>
-                <div class="description">{{ member.title }}</div>
+                <div class="content">
+                    <a class="header">{{ member.name }}</a>
+                    <div class="meta">
+                        <span class="date">{{ member.start }} ~ {{ member.end }}</span>
+                    </div>
+                    <div class="description">{{ member.title }}</div>
+                </div>
+                <div class="extra content">
+                    <a><i class="mail icon"></i>{{ member.mail }}</a>
+                </div>
             </div>
-            <div class="extra content">
-                <a><i class="mail icon"></i>{{ member.mail }}</a>
+        </div>
+    </div>
+    <div class="row" >
+        <div class="ui link cards">
+            <div class="ui card" ng-repeat="member in post_docs">
+                <div class="image">
+                    <img ng-src="{{member.img}}">
+                </div>
+                <div class="content">
+                    <a class="header">{{ member.name }}</a>
+                    <div class="meta">
+                        <span class="date">{{ member.start }} ~ {{ member.end }}</span>
+                    </div>
+                    <div class="description">{{ member.title }}</div>
+                </div>
+                <div class="extra content">
+                    <a><i class="mail icon"></i>{{ member.mail }}</a>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="row" >
+        <div class="ui link cards">
+            <div class="ui card" ng-repeat="member in doctors">
+                <div class="image">
+                    <img ng-src="{{member.img}}">
+                </div>
+                <div class="content">
+                    <a class="header">{{ member.name }}</a>
+                    <div class="meta">
+                        <span class="date">{{ member.start }} ~ {{ member.end }}</span>
+                    </div>
+                    <div class="description">{{ member.title }}</div>
+                </div>
+                <div class="extra content">
+                    <a><i class="mail icon"></i>{{ member.mail }}</a>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="row" >
+        <div class="ui link cards">
+            <div class="ui card" ng-repeat="member in masters">
+                <div class="image">
+                    <img ng-src="{{member.img}}">
+                </div>
+                <div class="content">
+                    <a class="header">{{ member.name }}</a>
+                    <div class="meta">
+                        <span class="date">{{ member.start }} ~ {{ member.end }}</span>
+                    </div>
+                    <div class="description">{{ member.title }}</div>
+                </div>
+                <div class="extra content">
+                    <a><i class="mail icon"></i>{{ member.mail }}</a>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="row" >
+        <div class="ui link cards">
+            <div class="ui card" ng-repeat="member in assistants">
+                <div class="image">
+                    <img ng-src="{{member.img}}">
+                </div>
+                <div class="content">
+                    <a class="header">{{ member.name }}</a>
+                    <div class="meta">
+                        <span class="date">{{ member.start }} ~ {{ member.end }}</span>
+                    </div>
+                    <div class="description">{{ member.title }}</div>
+                </div>
+                <div class="extra content">
+                    <a><i class="mail icon"></i>{{ member.mail }}</a>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="row" >
+        <div class="ui link cards">
+            <div class="ui card" ng-repeat="member in formers">
+                <div class="image">
+                    <img ng-src="{{member.img}}">
+                </div>
+                <div class="content">
+                    <a class="header">{{ member.name }}</a>
+                    <div class="meta">
+                        <span class="date">{{ member.start }} ~ {{ member.end }}</span>
+                    </div>
+                    <div class="description">{{ member.title }}</div>
+                </div>
+                <div class="extra content">
+                    <a><i class="mail icon"></i>{{ member.mail }}</a>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="row" >
+        <div class="ui link cards">
+            <div class="ui card" ng-repeat="member in none">
+                <div class="image">
+                    <img ng-src="{{member.img}}">
+                </div>
+                <div class="content">
+                    <a class="header">{{ member.name }}</a>
+                    <div class="meta">
+                        <span class="date">{{ member.start }} ~ {{ member.end }}</span>
+                    </div>
+                    <div class="description">{{ member.title }}</div>
+                </div>
+                <div class="extra content">
+                    <a><i class="mail icon"></i>{{ member.mail }}</a>
+                </div>
             </div>
         </div>
     </div>
